fix: overflow wish text

--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ html {
   background-size: cover;
   color: white;
   justify-content: end;
-  gap: 1.0rem;
+  gap: 1rem;
 }
 .page3-groom-name {
   font-size: xx-large;
@@ -428,20 +428,22 @@ button {
   background-size: cover;
   color: white;
   justify-content: start;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .page9-pagination-control-buttons {
   display: flex;
+  gap: 5rem;
 }
 .page9-pagination-control-button {
   background-color: transparent;
 }
 .wish-card {
-  width: 100%;
+  width: 80%;
   padding: 1rem;
   border-radius: 8px;
   margin: 1rem 0;
   position: relative;
+  word-wrap: break-word;
 }
 .wish-card.left {
   align-self: flex-start;
@@ -453,8 +455,19 @@ button {
   margin-right: 0;
   text-align: right;
 }
-.wishes-container{
+.wishes-container {
   font-size: larger;
+  display: flex;
+  flex-direction: column;
+}
+.wish-date{
+  font-size: small;
+}
+.single-line-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 200px;
 }
 
 /* Responsive text */
